--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                 <p id="here">Login Here</p>
                             </div>
                             <div class="w-[80%] text-[17px] flex flex-col gap-3 mt-5">
-                                <input class="border-b-2 border-[#ff7200] focus:outline-0 placeholder:text-white" type="text" placeholder="Enter Email Here">
-                                <input class="border-b-2 border-[#ff7200] focus:outline-0 placeholder:text-white" type="text" placeholder="Enter Password Here">
+                                <input class="border-b-2 border-[#ff7200] focus:outline-0 placeholder:text-white bg-transparent" type="text" placeholder="Enter Email Here">
+                                <input class="border-b-2 border-[#ff7200] focus:outline-0 placeholder:text-white bg-transparent" type="text" placeholder="Enter Password Here">
                             </div>
                             <div class="w-[80%] bg-[#ff7200] rounded-2xl flex items-center justify-center p-1 mt-6 text-white">
                                 <p class="mb-1 font-bold"><a href="#">Login</a></p>
